[gd_scene load_steps=6 format=3 uid="uid://c0o7br7yshcri"]

[ext_resource type="Script" path="res://scenes/game_objects/biome/snow_patch.gd" id="1_nn0yn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jihi0"]
size = Vector3(1, 0.36145, 1)

[sub_resource type="BoxMesh" id="BoxMesh_scd8g"]
size = Vector3(1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1jk0m"]
albedo_color = Color(0.568627, 1, 0.988235, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_spb80"]
size = Vector3(1, 0.102051, 1)

[node name="SnowPatch" type="RigidBody3D"]
collision_layer = 0
axis_lock_linear_x = true
axis_lock_linear_z = true
lock_rotation = true
max_contacts_reported = 4
linear_velocity = Vector3(0, -1, 0)
script = ExtResource("1_nn0yn")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.180725, 0.5)
shape = SubResource("BoxShape3D_jihi0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.05, 0.5)
mesh = SubResource("BoxMesh_scd8g")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_1jk0m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.0510254, 0.5)
shape = SubResource("BoxShape3D_spb80")

[node name="LifetimeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 15.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
